src/test/deca/etapeB/valid/class_decl/field_public_string.deca
// Description:
//    Déclaration d'une classe avec un attribut String
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

{

}

class {
	public String a;
}
